@@ -21901,6 +21901,33 @@ void menu_display_window_reduce_all(MENU_ITEM_PARAMETERS)
 	cls_menu_overlay();
 }
 
+//Minimizar todas las ventanas
+void menu_display_window_minimize_all(MENU_ITEM_PARAMETERS)
+{
+	//Podemos empezar desde la de arriba por ejemplo, da igual
+	zxvision_window *ventana;
+
+	ventana=zxvision_current_window;
+
+
+	while (ventana!=NULL) {
+
+		//Primero decimos que no esta minimizada
+        ventana->is_minimized=0;
+
+        zxvision_handle_click_minimize(ventana);
+
+
+		//Y guardar la geometria
+		util_add_window_geometry_compact(ventana);
+
+		ventana=ventana->previous_window;
+	}	
+
+	cls_menu_overlay();
+}
+
+
 
 void menu_display_window_rearrange(MENU_ITEM_PARAMETERS)
 {
@@ -21936,7 +21963,7 @@ void menu_windows(MENU_ITEM_PARAMETERS)
 				menu_add_item_menu_ayuda(array_menu_common,"Reduce windows to maximum size 20x10");
 			
 
-
+                menu_add_item_menu_format(array_menu_common,MENU_OPCION_NORMAL,menu_display_window_minimize_all,NULL,"Minimize windows");
 
 						
 			menu_add_item_menu(array_menu_common,"",MENU_OPCION_SEPARADOR,NULL,NULL);
